--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-#spring.application.name=messageriespring
 server.port=3007
-spring.datasource.url = jdbc:mysql://localhost:3306/enchers?useUnicode=yes&useJDBCCompliantTimezoneShift=true&characterEncoding=UTF-8
+spring.datasource.url = jdbc:mysql://localhost:3306/pfee?useUnicode=yes&useJDBCCompliantTimezoneShift=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
 
